--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -600,11 +600,11 @@ nav {
   }
 
   .product-section .text.left {
-    margin-left: -10%;
+    margin-left: -20%;
   }
 
   .product-section .text.right {
-    margin-right: -10%;
+    margin-right: -20%;
       }
 
   .product-section img,
@@ -622,7 +622,7 @@ nav {
   }
 
   .text ul li {
-    font-size: 0.5rem;
+    font-size: 0.1rem;
   }
 }
 
@@ -675,6 +675,7 @@ nav {
 @media screen and (max-width: 320px) {
   .products h1 {
     font-size: 1.2rem;
+    margin-top: 20%;
   }
 
   .products h2 {
@@ -692,11 +693,11 @@ nav {
   }
 
   .product-section .text.left {
-    margin-left: -10%;
+    margin-left: -7%;
   }
 
   .product-section .text.right {
-    margin-right: -10%;
+    margin-right: -7%;
       }
   .product-section .image {
     width: 100%;
@@ -714,7 +715,7 @@ nav {
 
   .text p,
   .text ul li {
-    font-size: 0.5rem;
+    font-size: 0.9rem;
   }
 }
 
